refactor(http): replace oapi-codegen with libopenapi (#269)
